--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10466,3 +10466,20 @@ a.text-dark:focus {
   }
 }
 
+.page-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: calc(100vh - 64px);
+}
+
+.page-wrapper > .container-fluid {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
