--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,15 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+// Layout
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 64px);
+}
+
+.page-wrapper > .container-fluid {
+    flex: 1;
+}
